[gd_scene load_steps=11 format=2]

[ext_resource path="res://Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Player_stuff/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://NewPlatform.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bonus/Bonus_stage.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "bounce"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 106.841, 91.8385 ), Vector2( 105.343, 112.815 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 27.2944, 28.1599 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[node name="Bonus_stage" type="Node2D"]
script = ExtResource( 4 )

[node name="NewPlatform" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.678431, 0.337255, 0.960784, 1 )
position = Vector2( 190.807, 280.723 )
scale = Vector2( 0.204882, 0.187039 )

[node name="text" type="RichTextLabel" parent="."]
margin_left = 106.841
margin_top = 91.8385
margin_right = 1127.84
margin_bottom = 373.839
rect_scale = Vector2( 0.685798, 0.709158 )
custom_fonts/normal_font = SubResource( 1 )
text = "             Welcome to  the bonus corner

Take a Break and Get a CHANCE to upgrade for next round"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 279.137, 228.613 )

[node name="Atk" type="Area2D" parent="."]
position = Vector2( 141.43, 433.27 )
collision_layer = 0

[node name="atk" type="RichTextLabel" parent="Atk"]
margin_left = -29.0
margin_top = -157.0
margin_right = 97.0
margin_bottom = -31.0
rect_scale = Vector2( 0.90535, 0.975416 )
custom_fonts/normal_font = SubResource( 2 )
text = "+ 10 maxATK"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atk"]
shape = SubResource( 6 )

[node name="Polygon2D" type="Polygon2D" parent="Atk"]
color = Color( 0.596078, 0.929412, 0.258824, 1 )
polygon = PoolVector2Array( -26.9415, -27.0648, 26.9366, -25.9424, 29.1815, 26.8134, -28.064, 27.9358 )

[node name="Health" type="Area2D" parent="."]
position = Vector2( 370.412, 431.025 )
collision_layer = 0

[node name="restore" type="RichTextLabel" parent="Health"]
margin_left = -54.5609
margin_top = -154.199
margin_right = 159.439
margin_bottom = -33.1986
rect_scale = Vector2( 0.91391, 0.921958 )
custom_fonts/normal_font = SubResource( 3 )
text = "Restore 40 health
+20 Health"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Health"]
shape = SubResource( 6 )

[node name="Polygon2D" type="Polygon2D" parent="Health"]
color = Color( 0.596078, 0.929412, 0.258824, 1 )
polygon = PoolVector2Array( -26.9415, -27.0648, 26.9366, -25.9424, 29.1815, 26.8134, -28.064, 27.9358 )

[node name="Casino" type="Area2D" parent="."]
position = Vector2( 633.069, 433.27 )
collision_layer = 0

[node name="CASINO" type="RichTextLabel" parent="Casino"]
margin_left = -64.3987
margin_top = -198.932
margin_right = 154.601
margin_bottom = 38.0678
rect_scale = Vector2( 0.811783, 0.912529 )
custom_fonts/normal_font = SubResource( 4 )
text = "A chance:
+ 10 axATK
Full restore (+40 max health)
No winnner today
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casino"]
shape = SubResource( 6 )

[node name="Polygon2D" type="Polygon2D" parent="Casino"]
color = Color( 0.596078, 0.929412, 0.258824, 1 )
polygon = PoolVector2Array( -26.9415, -27.0648, 26.9366, -25.9424, 29.1815, 26.8134, -28.064, 27.9358 )

[node name="End_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Atk" to="." method="_on_Atk_body_entered"]
[connection signal="body_entered" from="Health" to="." method="_on_Health_body_entered"]
[connection signal="body_entered" from="Casino" to="." method="_on_Casino_body_entered"]
[connection signal="timeout" from="End_timer" to="." method="_on_End_timer_timeout"]
